--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
 		}
 	],
 	"require":{
-		"php":">=5.3.0",
-		"dompdf/dompdf": "dev-master"
+		"php":">=5.4.0",
+		"dompdf/dompdf": "0.7.x@beta"
 	},
 	"autoload":{
 		"psr-4":{
